--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,7 +3,7 @@
 security:
 
     encoders:
-        FOS\UserBundle\Model\UserInterface: bcrypt
+        Partage\PartageBundle\Entity\User: sha512
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
@@ -17,7 +17,7 @@ security:
 
         fos_userbundle:
             id: fos_user.user_provider.username
-            
+
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
@@ -26,11 +26,16 @@ security:
 
         main:
             pattern: ^/
+            provider: fos_userbundle
             form_login:
-                provider: fos_userbundle
-                csrf_token_generator: security.csrf.token_manager
+                login_path: fos_user_security_login
+                check_path: fos_user_security_check
+            logout:
+                path:       fos_user_security_logout
+                target:     /platform
+            remember_me:
+                secret: %secret%
             anonymous: true
-            logout:       true
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
