--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,7 +32,7 @@ security:
                 check_path: fos_user_security_check
             logout:
                 path:       fos_user_security_logout
-                target:     /platform
+                target:     /
             remember_me:
                 secret: %secret%
             anonymous: true
