--- a/src/Partage/PartageBundle/Resources/config/services.yml
+++ b/src/Partage/PartageBundle/Resources/config/services.yml
@@ -1,4 +1,8 @@
-services:
 #    partage_partage.example:
 #        class: Partage\PartageBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
+services:
+    app.form.registration:
+        class: Partage\PartageBundle\Form\RegistrationType
+        tags:
+            - { name: form.type, alias: app_user_registration }
