--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -6,7 +6,7 @@ security:
         Partage\PartageBundle\Entity\User: sha512
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
+        ROLE_ADMIN:       [ROLE_ASSOS, ROLE_PART]
         ROLE_SUPER_ADMIN: ROLE_ADMIN
         
 
@@ -41,6 +41,7 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
             # activate different ways to authenticate
 
