working pages blocked

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -41,7 +41,8 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/association, role: ROLE_ASSOS }
+        - { path: ^/particulier, role: ROLE_PART }
         - { path: ^/admin/, role: ROLE_ADMIN }
             # activate different ways to authenticate
 
