--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -30,6 +30,7 @@ security:
             form_login:
                 login_path: fos_user_security_login
                 check_path: fos_user_security_check
+                csrf_token_generator: security.csrf.token_manager
             logout:
                 path:       fos_user_security_logout
                 target:     /
